--- a/faq.html
+++ b/faq.html
@@ -82,7 +82,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-action-help"></i>How do I participate?</div>
 							<div class="collapsible-body">
-								<p>Team registration is now open. Click <a href="http://play.camsctf.com">here</a> to register.</p>
+								<p>Team registration is now open. Click <a href="http://play.camsctf.com">here</a> to register. Registration for CCTF 2016 will open on March 1, 2016 at 8:00 AM UTC (<a target="_blank" href="http://www.convert-unix-time.com/?t=1456819200">1456819200</a>)</p>
 							</div>
 						</li>
 						<li>
@@ -94,7 +94,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-device-access-time"></i>When is this?</div>
 							<div class="collapsible-body">
-								<p>The competition will begin on April 18th at 12:00 AM UTC (<a target="_blank" href="http://www.convert-unix-time.com/?t=1429315200">1429315200</a>) and end on April 25th at 5:01 AM UTC (<a target="_blank" href="http://www.convert-unix-time.com/?t=1429938060">1429938060</a>). Click on the links to see what it would be in your time zone.</p>
+								<p>The competition will begin on March 21th at 12:00 AM UTC (<a target="_blank" href="http://www.convert-unix-time.com/?t=1458604800">1458604800</a>) and end on March 28th at 6:59 AM UTC (<a target="_blank" href="http://www.convert-unix-time.com/?t=1459148340">1459148340</a>). Click on the links to see what it would be in your time zone.</p>
 							</div>
 						</li>
 						<li>
